--- a/src/html/student/center-index.html
+++ b/src/html/student/center-index.html
@@ -16,6 +16,7 @@
             <div class="student-center-menu">
                 <div class="menu-info">
                     <div class="info-photo">
+                        <input class="file" type="file" accept="image/*,image/jpeg;capture=camera">
                         <img width="80" height="80" src="../../images/p6.jpg" alt="">
                     </div>
                     <h3 class="info-name">追风少年</h3>
