--- a/src/html/school/center/index.html
+++ b/src/html/school/center/index.html
@@ -11,20 +11,26 @@
     <div class="school-wrapper">
         <div class="wrapper clearfix">
             <div class="menu-m">
+                <h4 class="active"><a href="javascript:alert(1)">管理总览</a></h4>
                 <dl class="menu-list">
-                    <dt class="parent-li active">管理总览</dt>
-                    <dd class="">
-                        <div class="child-li active"><a href="javascript:alert('1')">学校资料</a></div>
-                        <div class="child-li"><a href="javascript:alert(1)">资料管理</a></div>
-                        <div class="child-li"><a href="javascript:alert(1)">资料管理</a></div>
+                    <dd>
+                        <div class="menu-item1"><a href="javascript:alert(1)">个人设置</a></div>
+                        <div class="menu-item2 active"><a href="javascript:alert(1)">资料管理</a></div>
+                        <div class="menu-item2"><a href="javascript:alert(1)">我的履历</a></div>
                     </dd>
-                    <dd class="menu-item"><a href="javascript:alert(1)">招生简章</a></dd>
-                    <dd class="menu-item"><a href="javascript:alert(1)">招生简章</a></dd>
-                    <dd class="menu-item active"><a href="javascript:alert(1)">招生简章</a></dd>
+                    <dd>
+                        <div class="menu-item1"><a href="javascript:alert(1)">账号管理</a></div>
+                    </dd>
+                    <dd>
+                        <div class="menu-item1"><a href="javascript:alert(1)">课程管理</a></div>
+                    </dd>
+                    <dd>
+                        <div class="menu-item1"><a href="javascript:alert(1)">荣誉认证</a></div>
+                    </dd>
                 </dl>
-                <div class="qr-code">
-                    <p>环球优才微信公众号</p>
-                    <div class="img">
+                <div class="follow-us">
+                    <h5>环球优才微信公众号</h5>
+                    <div class="cq-code">
                         <img width="115" height="115" src="../../../images/p_11.jpg" alt="">
                     </div>
                     <p>关注我们</p>
