--- a/src/html/teacher/center/index.html
+++ b/src/html/teacher/center/index.html
@@ -5,12 +5,12 @@
     <title>Title</title>
     <link rel="stylesheet" href="../../../../dist/base.css">
     <link rel="stylesheet" href="../../../../dist/teacher-center.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_24m7tg7ku8f1dcxr.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1lnkqyibpxxkcsor.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
     <div class="teacher-center-wrapper">
-        <div class="wrapper">
+        <div class="wrapper clearfix">
             <div class="menu-m">
                 <h4 class="active"><a href="javascript:alert(1)">管理总览</a></h4>
                 <dl class="menu-list">
@@ -35,6 +35,70 @@
                         <img width="115" height="115" src="../../../images/p_11.jpg" alt="">
                     </div>
                     <p>关注我们</p>
+                </div>
+            </div>
+            <div class="cont-m">
+                <div class="cont-index">
+                    <!--<div class="top-title">-->
+                        <!--照片-->
+                        <!--&lt;!&ndash;<a class="action fr" href="javascript:alert(1)"><i>+</i>添加班课</a>&ndash;&gt;-->
+                        <!--<p class="plc fr">仅支持 .jpg、.png、.jpeg 格式照片，大小不超过10M</p>-->
+                    <!--</div>-->
+                    <div class="top-banner">
+                        <a href="javascript: void(0)">
+                            <img width="918" height="120" src="../../../images/p8.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="info-head">
+                        <div class="photo">
+                            <img width="80" height="80" src="../../../images/p8.jpg" alt="">
+                        </div>
+                        <div class="detail">
+                            <h4 class="name">颜明玉</h4>
+                            <div class="desc">重庆-渝北区 | 8年教龄  | 女 | 28岁（1989/05/10</div>
+                            <div class="phone"><i class="iconPhone iconfont icon-shouji1"></i>15178719100 <i class="iconAttest iconfont icon-shenfenrenzheng"></i></div>
+                        </div>
+                        <div class="actions"><a href="javascript:void(0)"> 编辑资料 </a></div>
+                    </div>
+                    <div class="info-cont">
+                        <h4 class="title">账户状态 <span>当前信息不完整，还不能被学生搜到，快完善下述信息吧!</span></h4>
+                        <dl>
+                            <dt>
+                                <span class="task-text">任务已完成 <em>1/3</em></span>
+                                <span class="task-schedule"><em style="width: 20%;"></em></span>
+                            </dt>
+                            <dd>
+                                <div class="hd">
+                                    <i class="success_fill iconfont icon-success_fill"></i>
+                                    身份认证
+                                </div>
+                                <div class="bd">入驻环球优才的老师都需要经过身份认证哦</div>
+                                <div class="ft">
+                                    <a href="javascript:void (0)">查看</a>
+                                </div>
+                            </dd>
+                            <dd>
+                                <div class="hd">
+                                    <i class="prompt_fill iconfont icon-prompt_fill"></i>
+                                    资料管理
+                                </div>
+                                <div class="bd">待完善：一句话简介，头像，教龄，地址</div>
+                                <div class="ft">
+                                    <a href="javascript:void (0)">马上去完善</a>
+                                </div>
+                            </dd>
+                            <dd>
+                                <div class="hd">
+                                    <i class="prompt_fill iconfont icon-prompt_fill"></i>
+                                    荣誉认证
+                                </div>
+                                <div class="bd">为方便学生更了解你，提升学生对你的信任</div>
+                                <div class="ft">
+                                    <a href="javascript:void (0)">马上去设置</a>
+                                </div>
+                            </dd>
+                        </dl>
+                    </div>
                 </div>
             </div>
         </div>
