--- a/src/html/teacher/center/index.html
+++ b/src/html/teacher/center/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="../../../../dist/base.css">
     <link rel="stylesheet" href="../../../../dist/teacher-center.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1lnkqyibpxxkcsor.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_cgklpyvry04wjyvi.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
@@ -56,7 +56,14 @@
                         <div class="detail">
                             <h4 class="name">颜明玉</h4>
                             <div class="desc">重庆-渝北区 | 8年教龄  | 女 | 28岁（1989/05/10</div>
-                            <div class="phone"><i class="iconPhone iconfont icon-shouji1"></i>15178719100 <i class="iconAttest iconfont icon-shenfenrenzheng"></i></div>
+                            <div class="phone">
+                                <i class="iconPhone iconfont icon-shouji"></i>
+                                15178719100
+                                <i class="shenfenrenzheng iconfont icon-shenfenrenzheng"></i>
+                                <i class="jiaoshirenzheng iconfont icon-jiaoshirenzheng"></i>
+                                <i class="zhuanyerenzheng iconfont icon-zhuanyerenzheng"></i>
+                                <i class="xuelirenzheng iconfont icon-xuelirenzheng"></i>
+                            </div>
                         </div>
                         <div class="actions"><a href="javascript:void(0)"> 编辑资料 </a></div>
                     </div>
@@ -69,7 +76,7 @@
                             </dt>
                             <dd>
                                 <div class="hd">
-                                    <i class="success_fill iconfont icon-success_fill"></i>
+                                    <i class="success_fill iconfont icon-icon_ok"></i>
                                     身份认证
                                 </div>
                                 <div class="bd">入驻环球优才的老师都需要经过身份认证哦</div>
@@ -79,7 +86,7 @@
                             </dd>
                             <dd>
                                 <div class="hd">
-                                    <i class="prompt_fill iconfont icon-prompt_fill"></i>
+                                    <i class="prompt_fill iconfont icon-tishi"></i>
                                     资料管理
                                 </div>
                                 <div class="bd">待完善：一句话简介，头像，教龄，地址</div>
@@ -89,7 +96,7 @@
                             </dd>
                             <dd>
                                 <div class="hd">
-                                    <i class="prompt_fill iconfont icon-prompt_fill"></i>
+                                    <i class="prompt_fill iconfont icon-tishi"></i>
                                     荣誉认证
                                 </div>
                                 <div class="bd">为方便学生更了解你，提升学生对你的信任</div>
