--- a/src/html/teacher/center/course.html
+++ b/src/html/teacher/center/course.html
@@ -3,8 +3,182 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../../../../dist/base.css">
+    <link rel="stylesheet" href="../../../../dist/teacher-center.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_cgklpyvry04wjyvi.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
-
+<div class="teacher-center-wrapper">
+    <div class="wrapper clearfix">
+        <div class="menu-m">
+            <h4 class="active"><a href="javascript:alert(1)">管理总览</a></h4>
+            <dl class="menu-list">
+                <dd>
+                    <div class="menu-item1"><a href="javascript:alert(1)">个人设置</a></div>
+                    <div class="menu-item2 active"><a href="javascript:alert(1)">资料管理</a></div>
+                    <div class="menu-item2"><a href="javascript:alert(1)">我的履历</a></div>
+                </dd>
+                <dd>
+                    <div class="menu-item1"><a href="javascript:alert(1)">账号管理</a></div>
+                </dd>
+                <dd>
+                    <div class="menu-item1"><a href="javascript:alert(1)">课程管理</a></div>
+                </dd>
+                <dd>
+                    <div class="menu-item1"><a href="javascript:alert(1)">荣誉认证</a></div>
+                </dd>
+            </dl>
+            <div class="follow-us">
+                <h5>环球优才微信公众号</h5>
+                <div class="cq-code">
+                    <img width="115" height="115" src="../../../images/p_11.jpg" alt="">
+                </div>
+                <p>关注我们</p>
+            </div>
+        </div>
+        <div class="cont-m">
+            <div class="cont-course">
+                <div class="top-title">
+                    照片
+                    <a class="action fr" href="javascript:alert(1)"><i>+</i>添加班课</a>
+                    <!--<p class="plc fr">仅支持 .jpg、.png、.jpeg 格式照片，大小不超过10M</p>-->
+                </div>
+                <form action="">
+                    <div class="top-race">
+                        <div class="race-item"> 搜索： <input class="option" type="text"></div>
+                        <div class="race-item"> 班课状态： <select class="option" name="" id=""><option value="1">1</option></select></div>
+                        <div class="race-item"><button type="submit" class="btn submit">搜索</button></div>
+                        <div class="race-item"><button type="reset" class="btn reset">清空筛选条件 </button></div>
+                    </div>
+                </form>
+                <dl>
+                    <dt>
+                        <span class="w1">班课名称</span>
+                        <span class="w140">价格</span>
+                        <span class="w95">已报人数</span>
+                        <span class="w155">课程时间</span>
+                        <span class="w100">状态</span>
+                    </dt>
+                    <dd>
+                        <div class="w1 info">
+                            <div class="img">
+                                <img width="135" height="75" src="../../../images/p8.jpg" alt="">
+                            </div>
+                            <div class="name">
+                                高一化学考点精细梳理.典题验证 冲刺班 考前加油
+                            </div>
+                        </div>
+                        <div class="w140 price">
+                            <i>￥</i>590.00
+                        </div>
+                        <div class="w95 num">
+                            20
+                        </div>
+                        <div class="w155">
+                            <p>2017.7.11—2017.9.10</p>
+                            <p>周六 14:00-15:00</p>
+                        </div>
+                        <div class="w100">
+                            <span class="status review">正在招生</span>
+                        </div>
+                    </dd>
+                    <dd>
+                        <div class="w1 info">
+                            <div class="img">
+                                <img width="135" height="75" src="../../../images/p8.jpg" alt="">
+                            </div>
+                            <div class="name">
+                                高一化学考点精细梳理.典题验证 冲刺班 考前加油
+                            </div>
+                        </div>
+                        <div class="w140 price">
+                            <i>￥</i>590.00
+                        </div>
+                        <div class="w95 num">
+                            20
+                        </div>
+                        <div class="w155">
+                            <p>2017.7.11—2017.9.10</p>
+                            <p>周六 14:00-15:00</p>
+                        </div>
+                        <div class="w100">
+                            <span class="status conduct">正在招生</span>
+                        </div>
+                    </dd>
+                    <dd>
+                        <div class="w1 info">
+                            <div class="img">
+                                <img width="135" height="75" src="../../../images/p8.jpg" alt="">
+                            </div>
+                            <div class="name">
+                                高一化学考点精细梳理.典题验证 冲刺班 考前加油
+                            </div>
+                        </div>
+                        <div class="w140 price">
+                            <i>￥</i>590.00
+                        </div>
+                        <div class="w95 num">
+                            20
+                        </div>
+                        <div class="w155">
+                            <p>2017.7.11—2017.9.10</p>
+                            <p>周六 14:00-15:00</p>
+                        </div>
+                        <div class="w100">
+                            <span class="status refuse">正在招生</span>
+                        </div>
+                    </dd>
+                    <dd>
+                        <div class="w1 info">
+                            <div class="img">
+                                <img width="135" height="75" src="../../../images/p8.jpg" alt="">
+                            </div>
+                            <div class="name">
+                                高一化学考点精细梳理.典题验证 冲刺班 考前加油
+                            </div>
+                        </div>
+                        <div class="w140 price">
+                            <i>￥</i>590.00
+                        </div>
+                        <div class="w95 num">
+                            20
+                        </div>
+                        <div class="w155">
+                            <p>2017.7.11—2017.9.10</p>
+                            <p>周六 14:00-15:00</p>
+                        </div>
+                        <div class="w100">
+                            <span class="status class">正在招生</span>
+                        </div>
+                    </dd>
+                    <dd>
+                        <div class="w1 info">
+                            <div class="img">
+                                <img width="135" height="75" src="../../../images/p8.jpg" alt="">
+                            </div>
+                            <div class="name">
+                                高一化学考点精细梳理.典题验证 冲刺班 考前加油
+                            </div>
+                        </div>
+                        <div class="w140 price">
+                            <i>￥</i>590.00
+                        </div>
+                        <div class="w95 num">
+                            20
+                        </div>
+                        <div class="w155">
+                            <p>2017.7.11—2017.9.10</p>
+                            <p>周六 14:00-15:00</p>
+                        </div>
+                        <div class="w100">
+                            <span class="status complete">正在招生</span>
+                        </div>
+                    </dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
