--- a/src/html/teacher/center/Identity-set.html
+++ b/src/html/teacher/center/Identity-set.html
@@ -51,37 +51,39 @@
                     <p>2、带有*的项目为必填项，但是上传“身 </p>
                     <p>3、照片大小不要超过5M </p>
                 </div>
-                <div class="form-box">
-                    <div class="form-item">
-                        <p class="name"><i>*</i>姓名：</p>
-                        <input class="txt" type="text">
-                    </div>
-                    <div class="form-item">
-                        <p class="name"><i>*</i>身份证号码：</p>
-                        <input class="txt" type="text">
-                    </div>
-                    <div class="form-item">
-                        <p class="name"><i>*</i>手持身份证正面照：</p>
-                        <div class="upload-img">
-                            <input class="file" type="file" accept="image/*,image/jpeg;capture=camera">
-                            <img width="245" height="150" src="" alt="">
-                            <div class="upload-tit">上传图片</div>
+                <form action="">
+                    <div class="form-box">
+                        <div class="form-item">
+                            <p class="name"><i>*</i>姓名：</p>
+                            <input class="txt" type="text">
+                        </div>
+                        <div class="form-item">
+                            <p class="name"><i>*</i>身份证号码：</p>
+                            <input class="txt" type="text">
+                        </div>
+                        <div class="form-item">
+                            <p class="name"><i>*</i>手持身份证正面照：</p>
+                            <div class="upload-img">
+                                <input class="file" type="file" accept="image/*,image/jpeg;capture=camera">
+                                <img width="245" height="150" src="" alt="">
+                                <div class="upload-tit">上传图片</div>
+                            </div>
+                        </div>
+                        <div class="form-item">
+                            <p class="name"><i>*</i>手持身份证背面照：</p>
+                            <div class="upload-img">
+                                <input class="file" type="file" accept="image/*,image/jpeg;capture=camera">
+                                <img width="245" height="150" src="" alt="">
+                                <div class="upload-tit">上传图片</div>
+                            </div>
+                        </div>
+                        <div class="form-item">
+                            <p class="name"></p>
+                            <button type="submit" class="btn save">保存</button>
+                            <button type="reset" class="btn cancel">取消</button>
                         </div>
                     </div>
-                    <div class="form-item">
-                        <p class="name"><i>*</i>手持身份证背面照：</p>
-                        <div class="upload-img">
-                            <input class="file" type="file" accept="image/*,image/jpeg;capture=camera">
-                            <img width="245" height="150" src="" alt="">
-                            <div class="upload-tit">上传图片</div>
-                        </div>
-                    </div>
-                    <div class="form-item">
-                        <p class="name"></p>
-                        <button class="btn save">保存</button>
-                        <button class="btn cancel">取消</button>
-                    </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
