--- a/src/html/teacher/center/course.html
+++ b/src/html/teacher/center/course.html
@@ -59,6 +59,7 @@
                         <span class="w95">已报人数</span>
                         <span class="w155">课程时间</span>
                         <span class="w100">状态</span>
+                        <span class="w70">操作</span>
                     </dt>
                     <dd>
                         <div class="w1 info">
@@ -73,14 +74,20 @@
                             <i>￥</i>590.00
                         </div>
                         <div class="w95 num">
-                            20
+                            0/20
                         </div>
                         <div class="w155">
-                            <p>2017.7.11—2017.9.10</p>
-                            <p>周六 14:00-15:00</p>
+                            <p>2017-07-16</p>
+                            <p>到</p>
+                            <p>2017-07-23</p>
                         </div>
                         <div class="w100">
                             <span class="status review">正在招生</span>
+                        </div>
+                        <div class="w70">
+                            <a href="javascript:void (0)">编辑</a>
+                            <br/>
+                            <a href="javascript:void (0)">删除</a>
                         </div>
                     </dd>
                     <dd>
@@ -105,6 +112,11 @@
                         <div class="w100">
                             <span class="status conduct">正在招生</span>
                         </div>
+                        <div class="w70">
+                            <a href="javascript:void (0)">编辑</a>
+                            <br/>
+                            <a href="javascript:void (0)">删除</a>
+                        </div>
                     </dd>
                     <dd>
                         <div class="w1 info">
@@ -127,6 +139,11 @@
                         </div>
                         <div class="w100">
                             <span class="status refuse">正在招生</span>
+                        </div>
+                        <div class="w70">
+                            <a href="javascript:void (0)">编辑</a>
+                            <br/>
+                            <a href="javascript:void (0)">删除</a>
                         </div>
                     </dd>
                     <dd>
@@ -151,6 +168,11 @@
                         <div class="w100">
                             <span class="status class">正在招生</span>
                         </div>
+                        <div class="w70">
+                            <a href="javascript:void (0)">编辑</a>
+                            <br/>
+                            <a href="javascript:void (0)">删除</a>
+                        </div>
                     </dd>
                     <dd>
                         <div class="w1 info">
@@ -173,6 +195,11 @@
                         </div>
                         <div class="w100">
                             <span class="status complete">正在招生</span>
+                        </div>
+                        <div class="w70">
+                            <a href="javascript:void (0)">编辑</a>
+                            <br/>
+                            <a href="javascript:void (0)">删除</a>
                         </div>
                     </dd>
                 </dl>
