--- a/src/html/teacher/center/resume.html
+++ b/src/html/teacher/center/resume.html
@@ -45,7 +45,7 @@
                          <!--<a class="action fr" href="javascript:alert(1)"><i>+</i>添加班课</a>-->
                          <p class="plc fr">仅支持 .jpg、.png、.jpeg 格式照片，大小不超过10M</p>
                      </div>
-                     <div class="prompt"><i class="iconfont icon-tishi"></i>建议上传您的形象照、教学环境、上课照片及与学生的合照，有助于帮助学生和家长了解您哦</div>
+                     <div class="prompt"><i class="iconfont icon-tishi"></i>建议上传您的形象照、教学环境、上课照片及与学生的合照，有助于帮助学生和家长了解您哦<a class="action fr" href="javascript:alert(1)"><i>+</i>添加</a></div>
                      <ul class="clearfix">
                          <li>
                              <div class="block-img">
@@ -76,10 +76,11 @@
                 <div class="videos">
                     <div class="top-title">
                         视频
-                        <a class="action fr" href="javascript:alert(1)"><i>+</i>添加</a>
-                        <!--<p class="plc fr">仅支持 .jpg、.png、.jpeg 格式照片，大小不超过10M</p>-->
+                        <!--<a class="action fr" href="javascript:alert(1)"><i>+</i>添加</a>-->
+                        <p class="plc fr">视频最多可上传 6 个</p>
                     </div>
-                    <div class="prompt"><i class="iconfont icon-tishi"></i>建议上传您的形象照、教学环境、上课照片及与学生的合照，有助于帮助学生和家长了解您哦 副本</div>
+                    <div class="prompt"><i class="iconfont icon-tishi"></i>建议上传您的形象照、教学环境、上课照片及与学生的合照，有助于帮助学生和家长了解您哦 副本
+                        <a class="action fr" href="javascript:alert(1)"><i>+</i>添加</a></div>
                     <ul>
                         <li>
                             <div class="block-img">
