--- a/src/html/student/center-account.html
+++ b/src/html/student/center-account.html
@@ -152,40 +152,81 @@
                         </div>
                     </div>
                     <div class="item-form">
-                        <div class="form-component">
-                            <div class="cell">
-                                <div class="cell-hd">
-                                    已绑定手机号：
+                        <div>
+                            <div class="form-component">
+                                <div class="cell">
+                                    <div class="cell-hd">
+                                        已绑定手机号：
+                                    </div>
+                                    <div class="cell-bd">
+                                        <span class="mobile">151***9700</span>
+                                    </div>
+                                    <div class="cell-ft">
+                                    </div>
                                 </div>
-                                <div class="cell-bd">
-                                    <span class="mobile">151***9700</span>
+                            </div>
+                            <div class="form-component">
+                                <div class="cell">
+                                    <div class="cell-hd">
+                                        新登录密码：
+                                    </div>
+                                    <div class="cell-bd">
+                                        <input class="min-inout" type="text">
+                                        <button class="get-code disabled">获取验证码</button>
+                                    </div>
+                                    <div class="cell-ft">
+                                    </div>
                                 </div>
-                                <div class="cell-ft">
+                            </div>
+                            <div class="form-component">
+                                <div class="cell mt20">
+                                    <div class="cell-hd">
+                                    </div>
+                                    <div class="cell-bd">
+                                        <a class="btn success" href="javascript:alert(1)">下一步</a>
+                                        <a class="btn cancel" href="javascript:alert(1)">取消</a>
+                                    </div>
+                                    <div class="cell-ft">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="form-component">
-                            <div class="cell">
-                                <div class="cell-hd">
-                                    新登录密码：
-                                </div>
-                                <div class="cell-bd">
-                                    <input class="min-inout" type="text">
-                                    <button class="get-code disabled">获取验证码</button>
-                                </div>
-                                <div class="cell-ft">
+                        <div>
+                            <div class="form-component">
+                                <div class="cell">
+                                    <div class="cell-hd">
+                                        新手机号码：
+                                    </div>
+                                    <div class="cell-bd">
+                                        <input type="text" class="max-txt"/>
+                                    </div>
+                                    <div class="cell-ft">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="form-component">
-                            <div class="cell mt20">
-                                <div class="cell-hd">
+                            <div class="form-component">
+                                <div class="cell">
+                                    <div class="cell-hd">
+                                        新登录密码：
+                                    </div>
+                                    <div class="cell-bd">
+                                        <input class="min-inout" type="text">
+                                        <button class="get-code disabled">获取验证码</button>
+                                    </div>
+                                    <div class="cell-ft">
+                                    </div>
                                 </div>
-                                <div class="cell-bd">
-                                    <a class="btn success" href="javascript:alert(1)">下一步</a>
-                                    <a class="btn cancel" href="javascript:alert(1)">取消</a>
-                                </div>
-                                <div class="cell-ft">
+                            </div>
+                            <div class="form-component">
+                                <div class="cell mt20">
+                                    <div class="cell-hd">
+                                    </div>
+                                    <div class="cell-bd">
+                                        <a class="btn success" href="javascript:alert(1)">绑定手机</a>
+                                        <a class="btn cancel" href="javascript:alert(1)">取消</a>
+                                    </div>
+                                    <div class="cell-ft">
+                                    </div>
                                 </div>
                             </div>
                         </div>
