img-upload && video-upload

--- a/src/html/teacher/center/resume.html
+++ b/src/html/teacher/center/resume.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="../../../../dist/base.css">
     <link rel="stylesheet" href="../../../../dist/teacher-center.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_cgklpyvry04wjyvi.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_fl8xqmr34vs7cik9.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
@@ -39,13 +39,13 @@
         </div>
         <div class="cont-m">
             <div class="cont-resume">
-                 <div class="images">
+                <div class="images">
                      <div class="top-title">
                          图片
                          <!--<a class="action fr" href="javascript:alert(1)"><i>+</i>添加班课</a>-->
                          <p class="plc fr">仅支持 .jpg、.png、.jpeg 格式照片，大小不超过10M</p>
                      </div>
-                     <div class="prompt"><i class="iconfont icon-tishi"></i>建议上传您的形象照、教学环境、上课照片及与学生的合照，有助于帮助学生和家长了解您哦<a class="action fr" href="javascript:alert(1)"><i>+</i>添加</a></div>
+                     <div class="prompt"><i class="iconfont icon-tishi"></i>建议上传您的形象照、教学环境、上课照片及与学生的合照，有助于帮助学生和家长了解您哦<a class="action fr" href="javascript:void (0)"><i>+</i>添加</a></div>
                      <ul class="clearfix">
                          <li>
                              <div class="block-img">
@@ -80,7 +80,7 @@
                         <p class="plc fr">视频最多可上传 6 个</p>
                     </div>
                     <div class="prompt"><i class="iconfont icon-tishi"></i>建议上传您的形象照、教学环境、上课照片及与学生的合照，有助于帮助学生和家长了解您哦 副本
-                        <a class="action fr" href="javascript:alert(1)"><i>+</i>添加</a></div>
+                        <a class="action fr" href="javascript:void (0)"><i>+</i>添加</a></div>
                     <ul>
                         <li>
                             <div class="block-img">
@@ -105,9 +105,84 @@
                         </li>
                     </ul>
                 </div>
+                <div class="fixed-img">
+                    <div class="upload-fixed-img">
+                        <h4 class="upload-tit">成功上传一张（最多20张）</h4>
+                        <form action="">
+                            <div class="upload-box">
+                                <div class="file-box">
+                                    <input type="file" class="file">
+                                    <i class="iconfont icon-add1"></i>
+                                    <p>继续添加</p>
+                                </div>
+                                <div class="item-img">
+                                    <img width="208" height="185" src="../../../images/p6.jpg" alt="">
+                                    <input type="text" placeholder="添加描述，最多13个字">
+                                    <div class="delete-img iconfont icon-delete"></div>
+                                </div>
+                                <div class="item-img">
+                                    <img width="208" height="185" src="../../../images/p6.jpg" alt="">
+                                    <input type="text" placeholder="添加描述，最多13个字">
+                                    <div class="delete-img iconfont icon-delete"></div>
+                                </div>
+                                <div class="item-img">
+                                    <img width="208" height="185" src="../../../images/p6.jpg" alt="">
+                                    <input type="text" placeholder="添加描述，最多13个字">
+                                    <div class="delete-img iconfont icon-delete"></div>
+                                </div>
+                            </div>
+                            <div class="actions">
+                                <button type="submit" class="btn save">保持</button>
+                                <button type="reset" class="btn cancel">取消</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="fixed-vid">
+                    <div class="fixed-vid-box">
+                        <div  class="fixed-vid-tit">添加视频</div>
+                        <form action="" class="vid-form">
+                            <div class="item-form">
+                                <div class="upload-box">
+                                    <input type="file" class="file">
+                                    <div class="vid-icon iconfont icon-video"></div>
+                                    <p>上传视频</p>
+                                </div>
+                                <div class="desc">MP4/.AVI.WMV</div>
+                            </div>
+                            <div class="item-form">
+                               <span class="item-name">标题：</span>
+                                <input class="txt" type="text">
+                            </div>
+                            <div class="item-form">
+                                <p class="plc">请将视频大小控制在1g之类，哈哈哈哈哈哈哈哈哈哈哈哈啊哈</p>
+                            </div>
+                            <div class="actions">
+                                <button type="submit" class="btn save">保持</button>
+                                <button type="reset" class="btn cancel">取消</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+<script>
+    (function () {
+        $(function () {
+            $('.images .action').click(function () {
+                $(this).parents('.cont-resume').find('.fixed-img').show();
+            });
+            $('.videos .action').click(function () {
+                $(this).parents('.cont-resume').find('.fixed-vid').show();
+            });
+            $('.actions .cancel').click(function () {
+                $(this).parents('.fixed-img').hide();
+                $(this).parents('.fixed-vid').hide();
+            })
+        })
+    })();
+</script>
 </body>
 </html>
